[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scripts/interface/ResultMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/materials/fonts/terminal_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/audio/button_sound.wav" type="AudioStream" id=3]

[node name="ResultMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
margin_left = 40.0
margin_top = 20.0
margin_right = 215.0
margin_bottom = 42.0
theme = ExtResource( 2 )
text = "/Phoenix2/Меню_Результатов"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -876.0
margin_top = 90.0
margin_right = 876.0
margin_bottom = 112.0
theme = ExtResource( 2 )
text = "==========================================================================================================================================================================================================================="
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.0
margin_top = 105.0
margin_right = 66.0
margin_bottom = 127.0
theme = ExtResource( 2 )
text = "[Уровень пройден]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -876.0
margin_top = 125.0
margin_right = 876.0
margin_bottom = 147.0
theme = ExtResource( 2 )
text = "==========================================================================================================================================================================================================================="
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -50.0
margin_right = 39.0
margin_bottom = -28.0
theme = ExtResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label1" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -140.0
margin_right = -21.0
margin_bottom = -118.0
theme = ExtResource( 2 )
text = "Количество очков"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 38.0
margin_top = -140.0
margin_right = 179.0
margin_bottom = -123.0
theme = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.827
margin_top = -93.892
margin_right = -12.8272
margin_bottom = -76.892
theme = ExtResource( 2 )
text = "Время прохождения:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.82727
margin_top = -93.892
margin_right = 137.173
margin_bottom = -76.892
theme = ExtResource( 2 )
text = "00:00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label3" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.827
margin_top = -68.892
margin_right = -12.8272
margin_bottom = -51.892
theme = ExtResource( 2 )
text = "Убийств:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kill_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.82727
margin_top = -68.892
margin_right = 137.173
margin_bottom = -51.892
theme = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label4" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.827
margin_top = -43.892
margin_right = -12.8272
margin_bottom = -26.892
theme = ExtResource( 2 )
text = "Скрытых убийств:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stealth_Kill_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.82727
margin_top = -43.892
margin_right = 137.173
margin_bottom = -26.892
theme = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label5" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.827
margin_top = -18.892
margin_right = -12.8272
margin_bottom = -1.89197
theme = ExtResource( 2 )
text = "Кровавых убийств:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Meat_Kill_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.82727
margin_top = -18.892
margin_right = 137.173
margin_bottom = -1.89197
theme = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label6" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.827
margin_top = 6.10803
margin_right = -12.8272
margin_bottom = 23.108
theme = ExtResource( 2 )
text = "Раса:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="race_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.82727
margin_top = 6.10803
margin_right = 137.173
margin_bottom = 23.108
theme = ExtResource( 2 )
text = "Земнопони"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Silent_Assasin_label" type="Label" parent="."]
visible = false
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 47.0
theme = ExtResource( 2 )
text = "Тревога не была поднята"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_top = -50.0
margin_right = 220.0
margin_bottom = -28.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = 150.0
margin_right = -42.0
margin_bottom = 175.0
theme = ExtResource( 2 )
text = "               [Продолжить]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = 175.0
margin_right = -42.0
margin_bottom = 200.0
theme = ExtResource( 2 )
text = "               [В главное меню]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="mouse_entered" from="continue" to="." method="_on_mouse_entered" binds= [ "Продолжить" ]]
[connection signal="mouse_exited" from="continue" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_mouse_entered" binds= [ "В главное меню" ]]
[connection signal="mouse_exited" from="exit" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
